--- a/yaml/neurocaas_config.yaml
+++ b/yaml/neurocaas_config.yaml
@@ -1,3 +1,3 @@
-demixer: '/home/mat2245/circuit_mapping/circuitmap/demixers/nwd_ie_ChroME2f.ckpt'
+demixer: './demixers/nwd_ie_ChroME2f.ckpt'
 save_fmt: 'mat'
 msrmp: 0.4
